@@ -6,6 +6,9 @@ apport (0.91) UNRELEASED; urgency=low
   * apport/crashdb_impl/launchpad.py, close_duplicate(): Delete some
     attachments, as specified in apport-crash-duplicates spec, and make the
     bug public afterwards.
+  * apport/crashdb_impl/launchpad.py, close_duplicate(): If the master bug is
+    already duped to yet another bug, mark the bug to that one instead of the
+    master.
 
   Merge the fedora branch, thanks a lot to Will Woods wwoods@redhat.com>:
 
@@ -23,7 +26,7 @@ apport (0.91) UNRELEASED; urgency=low
   * crashdb.conf: Add stanzas for Fedora and a 'debug' database which uses the
     'memory' crashdb implementation.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Jul 2007 15:21:53 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Jul 2007 17:26:27 +0100
 
 apport (0.90) gutsy; urgency=low
 
